# native-ts

./: .rustfmt.toml  .rusty-hook.toml  Cargo.toml  Makefile.toml  README.md  ci_tasks.toml
.github/workflows/: clippy.yml  code-cov.yml  rust.yml  security.yml  tests.yml
ast/: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: import_lex_to_ast.rs  js_lex_to_ast.rs  lib.rs  node.rs
crates/ast/src/lex_to_ast/: import.rs  js.rs  mod.rs  tests.rs
crates/ast/src/types/: declarations.rs  expression_types.rs  expressions.rs  mod.rs  node.rs
crates/lexer/: Cargo.toml  Makefile.toml
crates/lexer/src/: import.rs  import_token.rs  js_token.rs  lib.rs  token.rs
crates/lexer/src/tokens/: bracket_token.rs  html_token.rs  js.rs  js_token.rs  mod.rs  static_import.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  tests.rs
src/: main.rs
src/lib/: ast.rs  mod.rs  parse_cli_args.rs  parser.rs  remote_script.rs  tokens.rs
src/libs/: ast.rs  file_reader.rs  mod.rs  parse_cli_args.rs  remote_script.rs  tokens.rs
tests/: common.rs  integration_test.rs
