[package]
name = "native-ts"
version = "0.0.1"
authors = ["Roee Shapira <roy.shap1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
logos = { version = "0.11" }

[dev-dependencies]
rusty-hook = "^0.11.1"
