[package]
name = "nts"
version = "0.0.1"
authors = ["Roee Shapira <roy.shap1@gmail.com>"]
edition = "2018"
repository = "https://github.com/5c077m4n/native-ts.git"
license-file = "LICENSE"
keywords = ["typescript", "native"]
publish = false

[dependencies]
tokio = { version = "0.2", features = ["full"] }
logos = { version = "0.11" }
structopt = { version = "0.3", features = [ "paw" ] }
paw = { version = "1.0" }
reqwest = { version = "0.10" }
url = { version = "2.1.1" }
regex = { version = "1" }
lazy_static = { version = "1.4" }

[dev-dependencies]
rusty-hook = { version = "0.11" }
