[package]
name = "parser"
version = "0.1.0"
authors = ["Roee Shapira <roy.shap1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = { version = "0.11" }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
ast = { path = "../ast" }
lexer = { path = "../lexer" }
